# notee

./: README.md  pyproject.toml
notee/: main.py
notee/ai/: api_key_alive.py  gemini.py  hackclub.py  openai.py  setup_ai.py
notee/cli/: create_book.py  create_idea.py  create_movie.py  create_source.py  create_todo.py  scan.py  search.py  setup.py  togle.py
notee/cli/commands/: ask.py  change_ai_model.py  change_ai_setup.py  create_idea.py  create_movie.py  create_todo.py  open.py  scan.py  search.py  setup.py  toggle.py
notee/cli/utils/: config.py  disk_operations.py  process_text.py  scaner.py  templates_list.py  view_md.py
notee/db/: add_file.py  create_db.py  get_file_names.py  get_file_patches.py  query.py  utils.py
notee/templates/: book.py  idea.py  movie.py  source.py  todo.py
notee/utils/: disk_operations.py  logs.py  setup.py
